# jrn_res_cov

./: .env.example  .gitignore  pyproject.toml
app/: config.py  main.py
app/api/: deps.py
app/api/v1/: analysis.py  cover_letter.py  resume.py  router.py
app/core/: celery_app.py  database.py  redis.py  security.py
app/models/: analysis.py  cover_letter.py  job.py  resume.py
app/schemas/: analysis.py  common.py  cover_letter.py  resume.py
app/services/: ai_service.py  analysis_service.py  cover_letter_service.py  pdf_service.py  resume_service.py  template_service.py
app/tasks/: analysis_tasks.py  resume_tasks.py
app/utils/: ai_prompts.py  exceptions.py  formatters.py  validators.py
