[project]
name = "jrn-res-cov"
version = "0.1.0"
description = "AI-powered Resume Builder and Analysis Platform"
authors = [{name = "Heramb", email = "heramb@jrn.ai"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and server
     "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "gunicorn>=21.2.0",

    # Database and ORM
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.12.1",

    # Redis and Celery
    "redis>=5.0.1",
    "celery>=5.3.4",
    "flower>=2.0.1",

    # Authentication and Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.25.2",

    # Data validation and serialization
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",

    # AI and ML
    "openai>=1.3.7",
    "langchain>=0.0.350",
    "tiktoken>=0.5.2",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.2",

    # File processing
    "python-docx>=1.1.0",
    "pypdf>=3.17.1",
    "weasyprint>=60.2",
    "jinja2>=3.1.2",
    "markdown>=3.5.1",

    # Image processing
    "pillow>=10.1.0",
    "wand>=0.6.13",

    # Data processing
    "pandas>=2.1.4",
    "numpy>=1.25.2",
    "python-dateutil>=2.8.2",

    # Utilities
    "python-slugify>=8.0.1",
    "phonenumbers>=8.13.26",
    "requests>=2.31.0",
    "aiofiles>=23.2.1",
    "python-magic>=0.4.27",

    # Monitoring and logging
    "structlog>=23.2.0",
    "sentry-sdk[fastapi]>=1.38.0",

    # Development and testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
]